--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Simple Calculator</title>
+
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="script.js"></script>
+</head>
+<body>
+    <main>
+
+        <div class="calc-body">
+            <div class="calc-screen">
+                <div id="input-screen"></div>
+                <div id="result-screen"></div>
+            </div>
+
+            <div class="calc-buttons">
+                <div>
+                    <button id="action_clear">CLR</button>
+                    <button id="action_del">DEL</button>
+                </div>
+
+                <div>
+                    <button id="9">9</button>
+                    <button id="8">8</button>
+                    <button id="7">7</button>
+                    <button id="6">6</button>
+                    <button id="5">5</button>
+                    <button id="4">4</button>
+                    <button id="3">3</button>
+                    <button id="2">2</button>
+                    <button id="1">1</button>
+                    <button id="0">0</button>
+                </div>
+
+                <div>
+                    <button id="sym_add">+</button>
+                    <button id="sym_mul">*</button>
+                    <button id="sym_sub">-</button>
+                    <button id="sym_div">/</button>
+                    <button id="sym_percent">%</button>
+                    <button id=".">.</button>
+                    <!-- <button id="">1</button> -->
+                    <button id="sym_equal">=</button>
+                </div>
+                
+            </div>
+        </div>
+
+    </main>
+</body>
+</html>
