Bug fixes and performance 1

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <button id="sym_mul">*</button>
                     <button id="sym_sub">-</button>
                     <button id="sym_div">/</button>
-                    <button id="sym_percent">%</button>
+                    <button id="sym_percent" disabled>%</button>
                     <button id=".">.</button>
                     <!-- <button id="">1</button> -->
                     <button id="sym_equal">=</button>
